--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="toko">Toko</string>
     <string name="beranda">Beranda</string>
     <string name="barang">Barang</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="kategori_produk">Kategori Produk</string>
     <string name="add">Add</string>
@@ -20,7 +19,68 @@
     <string name="name">Name</string>
 
     //sharedPreferences
-    <string name="dummy_name">Rifki Rahmad Aditya</string>
-    <string name="save">Save</string>
+    <string name="halo_tolong_isi_data_dibawah_ini">Halo, Tolong Isi Data Dibawah Ini!</string>
+    <string name="nama">Nama</string>
+    <string name="simpan">Simpan</string>
+
+    //setting
+    <string name="light_theme">Light Theme</string>
+    <string name="dark_theme">Dark Theme</string>
+
+    //editProduct
+    <string name="nama_produk">Nama Produk</string>
+    <string name="pilih_category">Pilih Category</string>
+    <string name="harga_produk">Harga Produk</string>
+
+    //editShop - addShop
+    <string name="nama_toko">Nama Toko</string>
+    <string name="alamat">Alamat</string>
+    <string name="nama_pemilik">Nama Pemilik</string>
+    <string name="nomor_telepon">Nomor Telepon</string>
+
+    //addCategory
+    <string name="kategori_nama_produk">Kategori Nama Produk</string>
+    <string name="tambah_kategori">Tambah Kategori</string>
+
+    //addDeposit
+    <string name="pilih_toko">Pilih Toko</string>
+    <string name="tentukan_tanggal_deposit">Tentukan Tanggal Deposit</string>
+    <string name="lanjut">Lanjut</string>
+
+    //addProduct
+    <string name="pilih_kategori">Pilih Kategori</string>
+    <string name="tambah_produk">Tambah Produk</string>
+
+    //addProductInDeposit
+    <string name="pilih_produk">Pilih Produk</string>
+    <string name="jumlah_produk">Jumlah Produk</string>
+    <string name="simpan_produk">Simpan Produk</string>
+
+    //addShop
+    <string name="tambah_toko">Tambah Toko</string>
+
+    //category
+    <string name="tidak_ada_kategori">Tidak Ada Kategori</string>
+
+    //deposit
+    <string name="tidak_ada_deposit">Tidak Ada Deposit</string>
+    <string name="tambah_deposit">Tambah Deposit</string>
+
+    //detailDeposit
+    <string name="nama_toko_deposit_detail">Nama Toko:</string>
+    <string name="tanggal_deposit_detail_deposit">Tanggal Deposit:</string>
+    <string name="tanggal_selesai_deposit_detail_deposit">Tanggal Selesai Deposit:</string>
+    <string name="list_produk">List Produk</string>
+
+    //product
+    <string name="tidak_ada_produk">Tidak Ada Produk</string>
+
+    //shop
+    <string name="tidak_ada_toko">Tidak Ada Toko</string>
+
+    //item productDeposit
+    <string name="nama_produk_product_in_deposit">Nama Produk :</string>
+    <string name="jumlah_produk_product_in_deposit">Jumlah Produk :</string>
+    <string name="jumlah_terjual">Jumlah Terjual</string>
 
 </resources>
