fix bug dibagian textView totalPenjualan, filter shopDetail, soldProductDeposit, animation,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
 
     <string name="format_show_list">%s</string>
     <string name="input_jumlah_kembali">Input Jumlah Kembali</string>
+    <string name="total_penjualan">Total Penjualan</string>
 
 
 </resources>
